project/resources/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: k8s-deploy
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello
  type: ClusterIP
