project/resources/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
   app: hello
  name: hello
  namespace: k8s-deploy
spec:
  port:
   targetPort: 8080
  to:
   kind: Service
   name: hello
